==> SeifAhmed25/TM4C123GH6PM-Drivers/DIO_AUTOSAR/MCAL/Dio/Dio.c <==
#include "../Dio_MemMap.h"
#include "Inc/Dio.h"

Dio_LevelType Dio_ReadChannel(Dio_ChannelType ChannelId){
	u8 pin  = ChannelId % 10;
	u8 port = ChannelId / 10;
	Dio_LevelType ChannelState = 0;
	switch(port)
	{
		case DIO_PORTA:
		ChannelState = (u8)(((GPIO_PORTA_BASE_ADDRESS -> GPIODATA_REG) & (1 << pin)) >> pin);
		break;
		case DIO_PORTB:
		ChannelState = (u8)(((GPIO_PORTB_BASE_ADDRESS -> GPIODATA_REG) & (1 << pin)) >> pin); 
		break;
		case DIO_PORTC:
		ChannelState = (u8)(((GPIO_PORTC_BASE_ADDRESS -> GPIODATA_REG) & (1 << pin)) >> pin);
		break;
		case DIO_PORTD:
		ChannelState = (u8)(((GPIO_PORTD_BASE_ADDRESS -> GPIODATA_REG) & (1 << pin)) >> pin);
		break;
		case DIO_PORTE:
		ChannelState = (u8)(((GPIO_PORTE_BASE_ADDRESS -> GPIODATA_REG) & (1 << pin)) >> pin);
		break;
		case DIO_PORTF:
		ChannelState = (u8)(((GPIO_PORTF_BASE_ADDRESS -> GPIODATA_REG) & (1<< pin)) >> pin);
		break; 
		default:
		break;
	}
	return ChannelState;
}

void Dio_WriteChannel(Dio_ChannelType ChannelId , Dio_LevelType Level){ 
	u8 pin  = ChannelId % 10;
	u8 port = ChannelId / 10;
	if(Level == STD_HIGH)
	{
		switch(port)
		{
			case DIO_PORTA:
			(GPIO_PORTA_BASE_ADDRESS -> GPIODATA_REG) |= (1 << pin);
			break;
			case DIO_PORTB:
			(GPIO_PORTB_BASE_ADDRESS -> GPIODATA_REG) |= (1 << pin);
			break;
			case DIO_PORTC:
			(GPIO_PORTC_BASE_ADDRESS -> GPIODATA_REG) |= (1 << pin);
			break;
			case DIO_PORTD:
			(GPIO_PORTD_BASE_ADDRESS -> GPIODATA_REG) |= (1 << pin);
			break;
			case DIO_PORTE:
			(GPIO_PORTE_BASE_ADDRESS -> GPIODATA_REG) |= (1 << pin);
			break;
			case DIO_PORTF:
			(GPIO_PORTF_BASE_ADDRESS -> GPIODATA_REG) |= (1 << pin);
			break;
			default: 
			break;
		}			
	}
	else if (Level == STD_LOW)
	{
		switch(port)
		{
			case DIO_PORTA:
			(GPIO_PORTA_BASE_ADDRESS -> GPIODATA_REG) &= ~ (1 << pin);
			break;
			case DIO_PORTB:
			(GPIO_PORTB_BASE_ADDRESS -> GPIODATA_REG) &= ~ (1 << pin);
			break;
			case DIO_PORTC:
			(GPIO_PORTC_BASE_ADDRESS -> GPIODATA_REG) &= ~ (1 << pin);
			break;
			case DIO_PORTD:
			(GPIO_PORTD_BASE_ADDRESS -> GPIODATA_REG) &= ~ (1 << pin);
			break;
			case DIO_PORTE:
			(GPIO_PORTE_BASE_ADDRESS -> GPIODATA_REG) &= ~ (1 << pin);
			break;
			case DIO_PORTF:
			(GPIO_PORTF_BASE_ADDRESS -> GPIODATA_REG) &= ~ (1 << pin);
			break;
			default:
			break;
		}		
	}
}

Dio_PortLevelType Dio_ReadPort(Dio_PortType PortID){
	Dio_PortLevelType PortValue = 0; 
	switch (PortID)
	{
		case DIO_PORTA: 
		PortValue = (u8)(GPIO_PORTA_BASE_ADDRESS -> GPIODATA_REG);
		break; 
		case DIO_PORTB: 
		PortValue = (u8)(GPIO_PORTB_BASE_ADDRESS -> GPIODATA_REG);
		break;
		case DIO_PORTC: 
		PortValue = (u8)(GPIO_PORTC_BASE_ADDRESS -> GPIODATA_REG);
		break;
		case DIO_PORTD: 
		PortValue = (u8)(GPIO_PORTD_BASE_ADDRESS -> GPIODATA_REG);
		break;
		case DIO_PORTE: 
		PortValue = (u8)(GPIO_PORTE_BASE_ADDRESS -> GPIODATA_REG);
		break;
		case DIO_PORTF: 
		PortValue = (u8)(GPIO_PORTF_BASE_ADDRESS -> GPIODATA_REG);
		break; 
	}
	return PortValue; 
}

void Dio_WritePort(Dio_PortType PortId,Dio_PortLevelType Level){
	switch (PortId)
	{
		case DIO_PORTA: 
		(GPIO_PORTA_BASE_ADDRESS -> GPIODATA_REG) = (u32) Level;
		break; 
		case DIO_PORTB: 
		(GPIO_PORTB_BASE_ADDRESS -> GPIODATA_REG) = (u32) Level;
		break;
		case DIO_PORTC: 
		(GPIO_PORTC_BASE_ADDRESS -> GPIODATA_REG) = (u32) Level;
		break;
		case DIO_PORTD: 
		(GPIO_PORTD_BASE_ADDRESS -> GPIODATA_REG) = (u32) Level;
		break;
		case DIO_PORTE: 
		(GPIO_PORTE_BASE_ADDRESS -> GPIODATA_REG) = (u32) Level;
		break;
		case DIO_PORTF: 
		(GPIO_PORTF_BASE_ADDRESS -> GPIODATA_REG) = (u32) Level;
		break;
	}
}

Dio_PortLevelType Dio_ReadChannelGroup(const Dio_ChannelGroupType* ChannelGroupIdPtr){
	Dio_PortLevelType ChannelGroupValue;
	switch (ChannelGroupIdPtr -> port)
	{
		case DIO_PORTA: 
		ChannelGroupValue  = (u8)((GPIO_PORTA_BASE_ADDRESS -> GPIODATA_REG) >> (ChannelGroupIdPtr -> offset));
		ChannelGroupValue &= (ChannelGroupIdPtr -> mask); 
		break; 
		case DIO_PORTB:
		ChannelGroupValue  = (u8)((GPIO_PORTB_BASE_ADDRESS -> GPIODATA_REG) >> (ChannelGroupIdPtr -> offset));
		ChannelGroupValue &= (ChannelGroupIdPtr -> mask);
		break;
		case DIO_PORTC: 
		ChannelGroupValue  = (u8)((GPIO_PORTC_BASE_ADDRESS -> GPIODATA_REG) >> (ChannelGroupIdPtr -> offset));
		ChannelGroupValue &= (ChannelGroupIdPtr -> mask);
		break;
		case DIO_PORTD: 
		ChannelGroupValue  = (u8)((GPIO_PORTD_BASE_ADDRESS -> GPIODATA_REG) >> (ChannelGroupIdPtr -> offset));
		ChannelGroupValue &= (ChannelGroupIdPtr -> mask);
		break;
		case DIO_PORTE: 
		ChannelGroupValue  = (u8)((GPIO_PORTE_BASE_ADDRESS -> GPIODATA_REG) >> (ChannelGroupIdPtr -> offset));
		ChannelGroupValue &= (ChannelGroupIdPtr -> mask);
		break;
		case DIO_PORTF: 
		ChannelGroupValue  = (u8)((GPIO_PORTF_BASE_ADDRESS -> GPIODATA_REG) >> (ChannelGroupIdPtr -> offset));
		ChannelGroupValue &= (ChannelGroupIdPtr -> mask);
		break;
	} 
	return ChannelGroupValue; 
}

void Dio_WriteChannelGroup (const Dio_ChannelGroupType* ChannelGroupIdPtr,Dio_PortLevelType Level){
	switch (ChannelGroupIdPtr -> port)
	{
		case DIO_PORTA: 
		(GPIO_PORTA_BASE_ADDRESS -> GPIODATA_REG) |= (u32)(Level << (ChannelGroupIdPtr -> offset));
		break; 
		case DIO_PORTB: 
		(GPIO_PORTB_BASE_ADDRESS -> GPIODATA_REG) |= (u32)(Level << (ChannelGroupIdPtr -> offset));
		break;
		case DIO_PORTC: 
		(GPIO_PORTC_BASE_ADDRESS -> GPIODATA_REG) |= (u32)(Level << (ChannelGroupIdPtr -> offset));
		break;
		case DIO_PORTD: 
		(GPIO_PORTD_BASE_ADDRESS -> GPIODATA_REG) |= (u32)(Level << (ChannelGroupIdPtr -> offset));
		break;
		case DIO_PORTE: 
		(GPIO_PORTE_BASE_ADDRESS -> GPIODATA_REG) |= (u32)(Level << (ChannelGroupIdPtr -> offset));
		break;
		case DIO_PORTF: 
		(GPIO_PORTF_BASE_ADDRESS -> GPIODATA_REG) |= (u32)(Level << (ChannelGroupIdPtr -> offset));
		break;
	}
}

Dio_LevelType Dio_FlipChannel (Dio_ChannelType ChannelId){ 
	u8 pin  = ChannelId % 10;
	u8 port = ChannelId / 10; 
	Dio_LevelType ChannelState = 0; 
	switch(port)
	{
		case DIO_PORTA:
		(GPIO_PORTA_BASE_ADDRESS -> GPIODATA_REG) ^= (1 << pin);
		ChannelState = (u8)(((GPIO_PORTA_BASE_ADDRESS -> GPIODATA_REG) & (1 << pin)) >> pin);
		break;
		case DIO_PORTB:
		(GPIO_PORTB_BASE_ADDRESS -> GPIODATA_REG) ^= (1 << pin);
		ChannelState = (u8)(((GPIO_PORTB_BASE_ADDRESS -> GPIODATA_REG) & (1 << pin)) >> pin);
		break;
		case DIO_PORTC:
		(GPIO_PORTC_BASE_ADDRESS -> GPIODATA_REG) ^= (1 << pin);
		ChannelState = (u8)(((GPIO_PORTC_BASE_ADDRESS -> GPIODATA_REG) & (1 << pin)) >> pin);
		break;
		case DIO_PORTD:
		(GPIO_PORTD_BASE_ADDRESS -> GPIODATA_REG) ^= (1 << pin);
		ChannelState = (u8)(((GPIO_PORTD_BASE_ADDRESS -> GPIODATA_REG) & (1 << pin)) >> pin);
		break;
		case DIO_PORTE:
		(GPIO_PORTE_BASE_ADDRESS -> GPIODATA_REG) ^= (1 << pin);
		ChannelState = (u8)(((GPIO_PORTE_BASE_ADDRESS -> GPIODATA_REG) & (1 << pin)) >> pin);
		break;
		case DIO_PORTF:
		(GPIO_PORTF_BASE_ADDRESS -> GPIODATA_REG) ^= (1 << pin);
		ChannelState = (u8)(((GPIO_PORTF_BASE_ADDRESS -> GPIODATA_REG) & (1 << pin)) >> pin);
		break;
	}	
	return ChannelState;
}
