==> yasminehelmy2001/AVR_Drivers/SrcCde/AUTOSAR_Drivers/DIO_Driver/DIO.c <==
#include "DIO.h"

Dio_LevelType Dio_ReadChannel(Dio_ChannelType ChannelId)
{
	/*If channel number is not valid*/
	if(ChannelId>u8PIN31)
	{
		/*DET Error Calling!*/
	}	
	/*Channel number is valid*/
	else
	{
		/*Create a return variable with an initial value*/
		Dio_LevelType RET_OutputLevel=STD_LOW;
		/*Create Local Variable to store Port Number (0-3)*/
		uint8 Loc_u8PortNumber=ChannelId/8;
		/*Create Local Variable to store Pin Number (0-7)*/
		uint8 Loc_u8PinNumber=ChannelId%8;
		/*Switch on Port Number*/
		switch(Loc_u8PortNumber)
		{
			/*PORTA Case*/
			case u8PORTA:
				/*If current channel state is STD_LOW*/
				if(GET_BIT(PINA,Loc_u8PinNumber)==STD_LOW)
				{
					/*return STD_LOW*/
					RET_OutputLevel=STD_LOW;
				}
				/*If current channel state is STD_HIGH*/
				else if(GET_BIT(PINA,Loc_u8PinNumber)==STD_HIGH)
				{
					/*return STD_HIGH*/
					RET_OutputLevel=STD_HIGH;
				}
				/*Else case for MISRA*/
				else
				{
					/*Do Nothing*/
				}
			break;
			/*PORTB Case*/
			case u8PORTB:
				/*If current channel state is STD_LOW*/
				if(GET_BIT(PINB,Loc_u8PinNumber)==STD_LOW)
				{
					/*return STD_LOW*/
					RET_OutputLevel=STD_LOW;
				}
				/*If current channel state is STD_HIGH*/
				else if(GET_BIT(PINB,Loc_u8PinNumber)==STD_HIGH)
				{
					/*return STD_HIGH*/
					RET_OutputLevel=STD_HIGH;
				}
				/*Else case for MISRA*/
				else
				{
					/*Do Nothing*/
				}	
			break;
			/*PORTC Case*/
			case u8PORTC:
				/*If current channel state is STD_LOW*/
				if(GET_BIT(PINC,Loc_u8PinNumber)==STD_LOW)
				{
					/*return STD_LOW*/
					RET_OutputLevel=STD_LOW;
				}
				/*If current channel state is STD_HIGH*/
				else if(GET_BIT(PINC,Loc_u8PinNumber)==STD_HIGH)
				{
					/*return STD_HIGH*/
					RET_OutputLevel=STD_HIGH;
				}
				/*Else case for MISRA*/
				else
				{
					/*Do Nothing*/
				}	
			break;
			/*PORTD Case*/
			case u8PORTD:
				/*If current channel state is STD_LOW*/
				if(GET_BIT(PIND,Loc_u8PinNumber)==STD_LOW)
				{
					/*return STD_LOW*/
					RET_OutputLevel=STD_LOW;
				}
				/*If current channel state is STD_HIGH*/
				else if(GET_BIT(PIND,Loc_u8PinNumber)==STD_HIGH)
				{
					/*return STD_HIGH*/
					RET_OutputLevel=STD_HIGH;
				}
				/*Else case for MISRA*/
				else
				{
					/*Do Nothing*/
				}
			break;
			/*Default case for MISRA*/
			default:
				/*Do Nothing*/
			break;
				}
			/*return channel level */
			return RET_OutputLevel;
	}
}

void Dio_WriteChannel(Dio_ChannelType ChannelId, Dio_LevelType Level)
{
	/*If channel number is not valid*/
	if(ChannelId>u8PIN31)
	{
		/*DET Error Calling!*/
	}
	/*Channel number is valid*/
	else
	{
		/*Create Local Variable to store Port Number (0-3)*/
		uint8 Loc_u8PortNumber=ChannelId/8;
		/*Create Local Variable to store Pin Number (0-7)*/
		uint8 Loc_u8PinNumber=ChannelId%8;
		/*Switch on Channel/Pin Number*/
		switch(Loc_u8PortNumber)
		{
			/*PORTA Case*/
			case u8PORTA:
				/*If pin not set as input, continue with configuration*/
				if(GET_BIT(DDRA,Loc_u8PinNumber)!=STD_LOW)
				{
					/*Switch on input level parameter*/
					switch(Level)
					{
						/*STD_LOW Case*/
						case STD_LOW:
							/*Set PORTA-PINx to STD_LOW*/
							CLR_BIT(PORTA,Loc_u8PinNumber);
						break;
						/*STD_HIGH Case*/
						case STD_HIGH:
							/*Set PORTA-PINx to STD_HIGH*/
							SET_BIT(PORTA,Loc_u8PinNumber);
						break;
						/*Default case for MISRA*/
						default:
						/*Do Nothing*/
						break;
					}
				}
				else
				{
					/*Do Nothing*/
				}
			break;
			/*PORTB Case*/
			case u8PORTB:
			/*If pin not set as input, continue with configuration*/
				if(GET_BIT(DDRB,Loc_u8PinNumber)!=STD_LOW)
				{
					/*Switch on input level parameter*/
					switch(Level)
					{
						/*STD_LOW Case*/
						case STD_LOW:
							/*Set PORTB-PINx to STD_LOW*/
							CLR_BIT(PORTB,Loc_u8PinNumber);
						break;
						case STD_HIGH:
							/*Set PORTB-PINx to STD_HIGH*/
							SET_BIT(PORTB,Loc_u8PinNumber);
						break;
						/*Default case for MISRA*/
						default:
						/*Do Nothing*/
						break;
					}
				}
				else
				{
					/*Do Nothing*/
				}
			break;
			/*PORTC Case*/
			case u8PORTC:
				/*If pin not set as input, continue with configuration*/
				if(GET_BIT(DDRC,Loc_u8PinNumber)!=STD_LOW)
				{
					/*Switch on input level parameter*/
					switch(Level)
					{
						/*STD_LOW Case*/
						case STD_LOW:
							/*Set PORTC-PINx to STD_LOW*/
							CLR_BIT(PORTC,Loc_u8PinNumber);
						break;
						case STD_HIGH:
							/*Set PORTC-PINx to STD_HIGH*/
							SET_BIT(PORTC,Loc_u8PinNumber);
						break;
						/*Default case for MISRA*/
						default:
						/*Do Nothing*/
						break;
					}
				}
				else
				{
					/*Do Nothing*/
				}
			break;
			/*PORTD Case*/
			case u8PORTD:
				/*If pin not set as input, continue with configuration*/
				if(GET_BIT(DDRD,Loc_u8PinNumber)!=STD_LOW)
				{
					/*Switch on input level parameter*/
					switch(Level)
					{
						/*STD_LOW Case*/
						case STD_LOW:
							/*Set PORTD-PINx to STD_LOW*/
							CLR_BIT(PORTD,Loc_u8PinNumber);
						break;
						/*Set PORTD-PINx to STD_LOW*/
						case STD_HIGH:
							/*Set PORTD-PINx to STD_HIGH*/
							SET_BIT(PORTD,Loc_u8PinNumber);
						break;
						/*Default case for MISRA*/
						default:
						/*Do Nothing*/
						break;
					}
				}
				else
				{
					/*Do Nothing*/
				}
			break;
			/*Default case for MISRA*/
			default:
			/*Do Nothing*/
			break;
			
		}
	}
}

Dio_PortLevelType Dio_ReadPort(Dio_PortType PortId)
{
	/*Check validity of port number parameter*/
	if(PortId>u8PORTD)
	{
		/*DET ERROR CONTROL*/
	}
	/* Parameter is valid, continue with operation*/
	else
	{
		/*Create return variable*/
		Dio_PortLevelType RET_u8PortLevel=STD_LOW;
		/*Switch on Port*/
		switch(PortId)
		{
			/*PORTA case*/
			case u8PORTA:
				/*Return PORTA level value*/
				RET_u8PortLevel=PINA;
			break;
			/*PORTB case*/
			case u8PORTB:
				/*Return PORTB level value*/
				RET_u8PortLevel=PINB;
			break;
			/*PORTB case*/
			case u8PORTC:
				/*Return PORTC level value*/
				RET_u8PortLevel=PINC;
			break;
			/*PORTB case*/
			case u8PORTD:
				/*Return PORTD level value*/
				RET_u8PortLevel=PIND;
			break;
			/*Default case for MISRA*/
			default:
			/*Do Nothing*/
			break;
		}
			/*return PORTx level value*/
			return RET_u8PortLevel;	
		
	}
}

void DIO_WritePort(Dio_PortType PortId, Dio_PortLevelType Level)
{
		/*Check validity of port number parameter*/
		if(PortId>u8PORTD)
		{
			/*DET ERROR CONTROL*/
		}
		/* Parameter is valid, continue with operation*/
		else
		{
			/*Switch on Port*/
			switch(PortId)
			{		
				/*Set Level to PORTA*/
				case u8PORTA:
					PORTA=Level;
				break;
				/*Set Level to PORTB*/
				case u8PORTB:
					PORTB=Level;
				break;
				/*Set Level to PORTC*/
				case u8PORTC:
					PORTC=Level;
				break;
				/*Set Level to PORTD*/
				case u8PORTD:
					PORTD=Level;
				break;
				/*Default case for MISRA*/
				default:
				/*Do Nothing*/
				break;
			}
		}
}

Dio_PortLevelType Dio_ReadChannelGroup(const Dio_ChannelGroupType* ChannelGroupIdPtr)
{
	
	/*Check if null pointer exists*/
	if(ChannelGroupIdPtr==NULL)
	{
		//DET ERROR CALL
	}
	/*Pointer not NULL, continue with operation*/
	else
	{
		/*Store current channel value (STD_HIGH/ STD_LOW)*/
		uint8 Loc_u8CurrentMaskChannelValue=STD_HIGH;
		
		/*Counter for mask bits equal to one*/
		uint8 Loc_u8NumOfBitsInChannelGroup=0;
		
		/*Iteration starts from offset*/
		uint8 iter=(ChannelGroupIdPtr->offset);
		
		/*While the current bit in the mask is equal to STD_HIGH*/
		while(Loc_u8CurrentMaskChannelValue==STD_HIGH)
		{
			/*Check if next mask bit is equal to STD_HIGH*/
			Loc_u8CurrentMaskChannelValue= GET_BIT(ChannelGroupIdPtr->mask,iter);
			
			/*Increment Counter*/
			Loc_u8NumOfBitsInChannelGroup++;
			
			/*Jump to Next Iteration*/
			iter++;
		}	
		/*Decrement Last Count*/
		Loc_u8NumOfBitsInChannelGroup--;
		
		/*Decrement Last Iteration*/
		iter--;
		
		/*Create a variable to store the value of the channel group*/
		Dio_PortLevelType Loc_u8ChannelGroupValue=STD_LOW;
		
		/*Set bits in Loc_u8ChannelGroupValue according to counter (number of channels in channel group)*/
		for(uint8 iter=0; iter<Loc_u8NumOfBitsInChannelGroup; iter++)
		{
			SET_BIT(Loc_u8ChannelGroupValue,iter);
		}
		
		/*clear the rest of the bits*/
		for(uint8 iter=Loc_u8NumOfBitsInChannelGroup; iter<u8PIN8; iter++)
		{
			CLR_BIT(Loc_u8ChannelGroupValue,iter);
		}
		
		/*AND the result with the original PORT value shifted right by offset value to get Channel Group Value*/
		switch(ChannelGroupIdPtr->port)
		{
			case u8PORTA:
				Loc_u8ChannelGroupValue&= ((PINA) >> (ChannelGroupIdPtr->offset));
			break;
			case u8PORTB:
				Loc_u8ChannelGroupValue&= ((PINB) >> (ChannelGroupIdPtr->offset));
			break;
			case u8PORTC:
				Loc_u8ChannelGroupValue&= ((PINC) >> (ChannelGroupIdPtr->offset));
			break;
			case u8PORTD:
				Loc_u8ChannelGroupValue&= ((PIND) >> (ChannelGroupIdPtr->offset));
			break;
			/*Default case for MISRA*/
			default:
			/*Do Nothing*/
			break;
		}
		
		/*Return channel group value*/
		return Loc_u8ChannelGroupValue;
	}
}

void Dio_WriteChannelGroup(const Dio_ChannelGroupType* ChannelGroupIdPtr, Dio_PortLevelType Level)
{
	/*Check if null pointer exists*/
	if(ChannelGroupIdPtr==NULL)
	{
		//DET ERROR CALL
	}
	
	/*Pointer not NULL, continue with operation*/
	else
	{
			/*Store current channel value (STD_HIGH/ STD_LOW)*/
			uint8 Loc_u8CurrentPortChannelValue=STD_HIGH;
			/*Counter for mask bits equal to one*/
			uint8 Loc_u8NumOfBitsInChannelGroup=0;
			/*Iteration starts from offset*/
			uint8 iter=(ChannelGroupIdPtr->offset);
			/*While the current bit in the mask is equal to STD_HIGH*/
			while(Loc_u8CurrentPortChannelValue==STD_HIGH)
			{
				/*Check if next mask bit is equal to STD_HIGH*/
				Loc_u8CurrentPortChannelValue= GET_BIT(ChannelGroupIdPtr->mask,iter);
				/*Increment Counter*/
				Loc_u8NumOfBitsInChannelGroup++;
				/*Jump to Next Iteration*/
				iter++;
			}
			/*Decrement Last Iteration*/
			iter--;
			/*Decrement Last Count*/
			Loc_u8NumOfBitsInChannelGroup--;
			/*Create a local variable to store port value*/
			uint8 Loc_u8ChannelGroupPort=0x00;
					/*Switch on port*/
					switch(ChannelGroupIdPtr->port)
					{
						/*PORTA case*/
						case u8PORTA:
						/*Store PORTA value in variable*/
						Loc_u8ChannelGroupPort=PINA;
						break;
						/*PORTB case*/
						case u8PORTB:
						/*Store PORTB value in variable*/
						Loc_u8ChannelGroupPort=PINB;
						break;
						/*PORTC case*/
						case u8PORTC:
						/*Store PORTC value in variable*/
						Loc_u8ChannelGroupPort=PINC;
						break;
						/*PORTD case*/
						case u8PORTD:
						/*Store PORTD value in variable*/
						Loc_u8ChannelGroupPort=PIND;
						break;
						/*Default case for MISRA*/
						default:
						/*Do Nothing*/
						break;
					}
			/*Loop over number of bits in channel group*/
			for(uint8 iter=0; iter<Loc_u8NumOfBitsInChannelGroup;iter++)
			{
				/*Get the logic level of a bit from the level variable*/
				uint8 Loc_u8ValueBit=GET_BIT(Level,iter);
		
				/*Switch on logic level of the bit*/
				switch(Loc_u8ValueBit)
				{
					/*If low*/
					case STD_LOW:
						/*Clear the corresponding channel group bit*/
						CLR_BIT(Loc_u8ChannelGroupPort,(iter+ChannelGroupIdPtr->offset));
					break;
					/*If high*/
					case STD_HIGH:
						/*Set the corresponding channel group bit*/
						SET_BIT(Loc_u8ChannelGroupPort,(iter+ChannelGroupIdPtr->offset));
					break;
					/*Default case for MISRA*/
					default:
					/*Do Nothing*/
					break;
				}
			}
			/*Apply changes to port*/
			DIO_WritePort(ChannelGroupIdPtr->port,Loc_u8ChannelGroupPort) ;
	}
}

Dio_LevelType Dio_FlipChannel(Dio_ChannelType ChannelId)
{
	if(ChannelId>31)
	{
		//DET ERROR HANDLING
	}
	else
	{
		/*Create Local Variable to store Port Number (0-3)*/
		uint8 Loc_u8PortNumber=ChannelId/8;
		
		/*Create Local Variable to store Pin Number (0-7)*/
		uint8 Loc_u8PinNumber=ChannelId%8;
		
		/*Create return variable to store the flipped channel level*/ 
		Dio_LevelType RET_u8ChannelLevel=STD_LOW;
		
		/*Switch on port*/
		switch(Loc_u8PortNumber)
		{
			/*PORTA Case*/
			case u8PORTA:
				/*If pin is NOT configured as input*/ 
				if(GET_BIT(DDRA,Loc_u8PinNumber)!=STD_LOW)
				{
					/*Read channel level*/
					RET_u8ChannelLevel=Dio_ReadChannel(ChannelId);
					/*Invert channel level*/
					if(RET_u8ChannelLevel==STD_LOW)
					{
						Dio_WriteChannel(ChannelId,STD_HIGH);
						RET_u8ChannelLevel=STD_HIGH;
					}
					/*Invert channel level*/
					else if(RET_u8ChannelLevel==STD_HIGH)
					{
						Dio_WriteChannel(ChannelId,STD_LOW);
						RET_u8ChannelLevel=STD_LOW;
					}
					/*Else case for MISRA*/
					else
					{
						/*Do Nothing*/
					}
				}
				/*If pin is configured as input*/
				else
				{
					/*Do Nothing*/
				}
			break;
			/*PORTB Case*/
			case u8PORTB:
				/*If pin is NOT configured as input*/
				if(GET_BIT(DDRB,Loc_u8PinNumber)!=STD_LOW)
				{
					/*Read channel level*/
					RET_u8ChannelLevel=Dio_ReadChannel(ChannelId);
					/*Invert channel level*/
					if(RET_u8ChannelLevel==STD_LOW)
					{
						Dio_WriteChannel(ChannelId,STD_HIGH);
						RET_u8ChannelLevel=STD_HIGH;
					}
					/*Invert channel level*/
					else if(RET_u8ChannelLevel==STD_HIGH)
					{
						Dio_WriteChannel(ChannelId,STD_LOW);
						RET_u8ChannelLevel=STD_LOW;
					}
					/*Else case for MISRA*/
					else
					{
						/*Do Nothing*/
					}
				}
				/*If pin is configured as input*/
				else
				{
					/*Do Nothing*/
				}
			break;
			/*PORTC Case*/
			case u8PORTC:
				/*If pin is NOT configured as input*/
				if(GET_BIT(DDRC,Loc_u8PinNumber)!=STD_LOW)
				{
					/*Read channel level*/
					RET_u8ChannelLevel=Dio_ReadChannel(ChannelId);
					
					/*Invert channel level from STD_LOW to STD_HIGH*/
					if(RET_u8ChannelLevel==STD_LOW)
					{
						Dio_WriteChannel(ChannelId,STD_HIGH);
						RET_u8ChannelLevel=STD_HIGH;
					}
					
					/*Invert channel level from STD_HIGH to STD_LOW*/
					else if(RET_u8ChannelLevel==STD_HIGH)
					{
						Dio_WriteChannel(ChannelId,STD_LOW);
						RET_u8ChannelLevel=STD_LOW;
					}
				}
				/*If pin is configured as input*/
				else
				{
					/*Do Nothing*/
				}
			break;
			/*PORTD Case*/
			case u8PORTD:
				/*If pin is NOT configured as input*/
				if(GET_BIT(DDRD,Loc_u8PinNumber)!=STD_LOW)
				{
					/*Read channel level*/
					RET_u8ChannelLevel=Dio_ReadChannel(ChannelId);	
					/*Invert channel level from STD_LOW to STD_HIGH*/
					if(RET_u8ChannelLevel==STD_LOW)
					{
						Dio_WriteChannel(ChannelId,STD_HIGH);
						RET_u8ChannelLevel=STD_HIGH;
					}		
					/*Invert channel level from STD_HIGH to STD_LOW*/
					else if(RET_u8ChannelLevel==STD_HIGH)
					{
						Dio_WriteChannel(ChannelId,STD_LOW);
						RET_u8ChannelLevel=STD_LOW;
					}
					/*Else case for MISRA*/
					else
					{
						/*Do Nothing*/
					}
				}
				/*If pin is configured as input*/
				else
				{
					/*Do Nothing*/
				}
			break;
			/*Default case for MISRA*/
			default:
			/*Do Nothing*/
			break;
		}
		/*Return flipped channel level*/
		return RET_u8ChannelLevel;	
	}
	
}
